examples/test/testpolicy13360.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13360
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key27: value19
      key19: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value40
          key38: value12
          key45: value36
      podSelector:
        matchLabels:
          key47: value37
